# lvfs-db

./: CMakeLists.txt
src/: lvfs_db_INode.cpp  lvfs_db_INode.h  lvfs_db_IStorage.cpp  lvfs_db_IStorage.h  lvfs_db_Package.cpp  lvfs_db_Package.h  lvfs_db_Plugin.cpp  lvfs_db_Plugin.h  lvfs_db_Storage.cpp  lvfs_db_Storage.h  lvfs_db_common.cpp  lvfs_db_common.h
src/constraints/: lvfs_db_BaseConstraint.cpp  lvfs_db_BaseConstraint.h
src/constraints/group/: lvfs_db_GroupConstraint.cpp  lvfs_db_GroupConstraint.h
src/constraints/value/: lvfs_db_ValueConstraint.cpp  lvfs_db_ValueConstraint.h
src/gui/choose/: lvfs_db_ChooseEntityDialog.cpp  lvfs_db_ChooseEntityDialog.h
src/gui/create/: lvfs_db_CreateEntityDialog.cpp  lvfs_db_CreateEntityDialog.h
src/gui/create/model/: lvfs_db_EntitiesListDelegate.cpp  lvfs_db_EntitiesListDelegate.h  lvfs_db_EntitiesListModel.cpp  lvfs_db_EntitiesListModel.h
src/gui/list/: lvfs_db_ListEntityDialog.cpp  lvfs_db_ListEntityDialog.h
src/gui/list/model/: lvfs_db_EntitiesTreeModel.cpp  lvfs_db_EntitiesTreeModel.h
src/gui/query/constraint/: lvfs_db_ConstraintQueryDialog.cpp  lvfs_db_ConstraintQueryDialog.h
src/gui/query/create/: lvfs_db_CreateQueryDialog.cpp  lvfs_db_CreateQueryDialog.h
src/gui/value/: lvfs_db_EntityValueDialog.cpp  lvfs_db_EntityValueDialog.h  lvfs_db_SelectValueDialog.cpp  lvfs_db_SelectValueDialog.h  lvfs_db_SelectValueWidget.cpp  lvfs_db_SelectValueWidget.h  lvfs_db_ValueWidget.cpp  lvfs_db_ValueWidget.h
src/gui/value/composite/: lvfs_db_CompositeValueDialog.cpp  lvfs_db_CompositeValueDialog.h
src/gui/value/edit/: lvfs_db_EditCompositeValueDialog.cpp  lvfs_db_EditCompositeValueDialog.h
src/gui/value/model/: lvfs_db_CompositeValueDelegate.cpp  lvfs_db_CompositeValueDelegate.h  lvfs_db_CompositeValueModel.cpp  lvfs_db_CompositeValueModel.h  lvfs_db_ValueListModel.cpp  lvfs_db_ValueListModel.h  lvfs_db_ValueListProxyModel.cpp  lvfs_db_ValueListProxyModel.h
src/gui/value/simple/: idm_simplevaluedialog.h  lvfs_db_SimpleValueDialog.h
src/model/: lvfs_db_Delegate.cpp  lvfs_db_Delegate.h  lvfs_db_FilterValueModel.cpp  lvfs_db_FilterValueModel.h  lvfs_db_ListValueModel.cpp  lvfs_db_ListValueModel.h  lvfs_db_Model.cpp  lvfs_db_Model.h  lvfs_db_ValueDelegate.cpp  lvfs_db_ValueDelegate.h  lvfs_db_ValueModel.cpp  lvfs_db_ValueModel.h
src/model/items/: lvfs_db_FileItem.cpp  lvfs_db_FileItem.h  lvfs_db_Item.cpp  lvfs_db_Item.h  lvfs_db_PropertyItem.cpp  lvfs_db_PropertyItem.h  lvfs_db_SubFileItem.cpp  lvfs_db_SubFileItem.h  lvfs_db_ValueItem.cpp  lvfs_db_ValueItem.h
src/nodes/filesystem/: lvfs_db_FileSystemDirectory.cpp  lvfs_db_FileSystemDirectory.h  lvfs_db_FileSystemNode.cpp  lvfs_db_FileSystemNode.h
src/nodes/query/: lvfs_db_InvalidFile.cpp  lvfs_db_InvalidFile.h  lvfs_db_QueryResultsNode.cpp  lvfs_db_QueryResultsNode.h
src/nodes/root/: lvfs_db_RootNode.cpp  lvfs_db_RootNode.h  lvfs_db_RootView.cpp  lvfs_db_RootView.h
(+88 files in other folders)
